Added class to textbox

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 
 <html>
 <head>
-    <title>Name Check</title>
+    <title>Dark Souls 3 Name Check</title>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
 </head>
 <body>
@@ -82,8 +83,8 @@
         <section id="main_content" class="inner" style="text-align: center">
             <div>It appears that Dark Souls 3 is currently doing a case sensitive check for words, meaning you can bypass the filter by adding an uppercase letter to your name.</div>
             <br/>
-            <div>Just start typing:</div>
-            <input type="text" id="nameInput" maxlength="14"/>
+            <div>Just start typing...</div>
+            <input type="text" id="nameInput" maxlength="14" class="form-control"/>
             <div id="outputContent">
                 <p id="outputMessage"></p>
                 <p id="outputName"></p>
