Removing invalid disallowed characters

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <script type="text/javascript" src="censorlist.js"></script>
 <script type="text/javascript">
 
-    var disallowedChars = [192, 189, 187, 219, 221, 186, 222, 220, 188, 190, 191, 111, 106, 109, 107, 110];
-    var disallowedShiftChars = [49, 50, 51, 52, 53, 54, 55, 56, 57, 48];
+    var disallowedChars = [];
+    var disallowedShiftChars = [51, 53];
 
     $(document).ready(function() {
         $('#nameInput').on('keydown', function(e) {
